se crea el post
