# api/swagger/swagger.yaml
@@ -18,12 +18,13 @@ consumes:
 produces:
   - application/json
 paths:
-  /lista_niveles/{id}:
+
+  /nivel/{id}:
       # our controller name
       x-swagger-router-controller: nivel
       get:
-        description: Obtener un usuario
-        operationId: get_nivel_id
+        description: Obtener un nivel capturado por id
+        operationId: getNivelId
         # define the type of response for Success "200" and Error
         parameters:
           - name: id
@@ -34,12 +35,12 @@ paths:
           "200":
             description: Success
             schema:
-              $ref: "#/definitions/GetUserResponse"
+              $ref: "#/definitions/Nivel"
           default:
             description: Error
             schema:
               $ref: "#/definitions/ErrorResponse"
- 
+  
   
   /lista_niveles:
     # our controller name
@@ -247,6 +248,31 @@ definitions:
       - name
       - rut
       - mail
+  Nivel:
+    type: object
+    properties:
+      sigla:
+        type: string
+        description: Nombre completo del usuario
+      tipo_nivel:
+        type: string
+        description: RUT del usuario
+      grado:
+        type: number
+        description: Correo del usuario
+      descripcion:
+        type: string
+        description: descripción del nivel
+      decreto:
+        type: string
+        description: hola
+    required:
+      - sigla
+      - tipo_nivel
+      - grado
+      - descripcion
+      - decreto
+      
   GeneralResponse:
     type: object
     properties:
@@ -273,3 +299,6 @@ definitions:
         type: string
       mail:
         type: string
+ 
+
+  
